--- a/BlockChainService/pom.xml
+++ b/BlockChainService/pom.xml
@@ -33,6 +33,12 @@
             <version>3.4.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
