--- a/BlockChainService/pom.xml
+++ b/BlockChainService/pom.xml
@@ -70,12 +70,12 @@
             <!--<artifactId>logback-classic</artifactId>-->
             <!--<version>1.2.3</version>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>junit</groupId>-->
+            <!--<artifactId>junit</artifactId>-->
+            <!--<version>5.2.0</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
